# tiledesk-ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  command.py  query.py  run.py  train.py
domain/: _oridiet_config.json  diet1_config.json  diet_config.json  nlu.json  nlu1.json  nlu2.json  nlu3.json  nlu4.json  nlu5.json  nlu6.json  nlu_datestare.json  nlu_diet.json  nlu_ner-CRF.json
domain/diet/: nlu_diet.json  nlu_example.json
models/new/: config.json  vocab.vby
models/prova/: config.json
shared/: const.py  exceptions.py
tileai/: TileTrainertorchFF.py  __init__.py  __main__.py  api.py  httpapi.py  model_training.py  server.py
tileai/classifier/: torch_classifiers.py
tileai/cli/: __init__.py  query.py  run.py  train.py  utils.py
tileai/core/: TileTrainer.py  TileTrainerBag.py  TileTrainertorchFF.py  TileTrainertorch_average.py  TileTrainertorch_ff.py  TileTrainertorch_wbag.py  __init__.py  abstract_tiletrainer.py  model_training.py  server.py  tiletrainer.py  tiletrainer_average.py  tiletrainer_bag.py  tiletrainer_bert.py  tiletrainer_diet.py  tiletrainer_ff.py  tiletrainer_gpt2.py  tiletrainer_lstm.py  tiletrainer_semantic.py  tiletrainer_wbag.py
tileai/core/classifier/: CRF_ner.py  diet_classifier.py  diet_trainer.py  diet_wrapper.py  torch_classifiers.py
tileai/core/http/: httprun.py  redis_model.py  server.py
tileai/core/preprocessing/: crf_datareader.py  crf_dataset.py  data_reader.py  diet_dataset.py  textprocessing.py
tileai/core/tokenizer/: standard_tokenizer.py  tokenizer.py
tileai/http/: __init__.py  httprun.py
tileai/shared/: const.py  exceptions.py  utils.py
