# pyproject.toml
[tool.poetry]
name = "tileai"
version = "0.1.0"
description = "Description of your app goes here."
authors = ["Your Name <your.email@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
clint = "^0.5.1"
pandas = "^2.1.4"
sanic = "^22.9.0"
#Sanic ="^22.3.2"
#Sanic_cors = "2.2.0"
#sanic_jwt= "1.8.0"
#aiohttp="3.8.3"
Sanic_cors = "^2.2.0"
sanic_jwt= "^1.8.0"
aiohttp="^3.8.3"
#sklearn
scikit-learn= "^1.3.2"
#transformers>=4.20.1
datasets= "^2.15.0"
torch= "^2.1.0"
torchtext= "^0.16.0"
scikit-plot= "^0.3.7"
jsonschema= "^4.20.0"
redis= "^5.0.0"
aioredis= "^2.0.0"
#transformers= "^4.35.0"

[tool.poetry.dependencies.transformers]
version = "^4.35.0"
extras = [ "torch"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tileai = "tileai.__main__:main"



