# pyproject.toml
[tool.poetry]
name = "tileai"
version = "0.2.0"
description = "tiledesk ai"
authors = ["Gianluca Lorenzo"]
repository = "https://github.com/Tiledesk/tiledesk-ai"
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
clint = "^0.5.1"
pandas = "^2.1.4"
sanic = "^22.9.0"
#Sanic ="^22.3.2"
#Sanic_cors = "2.2.0"
#sanic_jwt= "1.8.0"
#aiohttp="3.8.3"
Sanic_cors = "^2.2.0"
sanic_jwt= "^1.8.0"
aiohttp="^3.8.3"
#sklearn
scikit-learn= "^1.3.2"
#transformers>=4.20.1
datasets= "^2.15.0"
torch= "^2.1.0"
torchtext= "^0.16.0"
scikit-plot= "^0.3.7"
jsonschema= "^4.20.0"
redis= "^5.0.0"
aioredis= "^2.0.0"
#transformers= "^4.35.0"
langchain = "^0.1.9"
jq = "^1.6.0"
openai = "^1.12.0"
langchain_openai = "^0.0.7"
pinecone-client = "^3.1.0"
python-dotenv = "^1.0.1"
langchain_community = "^0.0.24"

[tool.poetry.dependencies.transformers]
version = "^4.35.0"
extras = [ "torch"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tileai = "tileai.__main__:main"



